# reginae

./: Cargo.toml  README.md
cli/: Cargo.toml
cli/src/: main.rs
core/: Cargo.toml
core/src/: board.rs  cell.rs  lib.rs
evaluators/: Cargo.toml
evaluators/src/: lib.rs
solver/: Cargo.toml
solver/src/: evaluator.rs  lib.rs  normalized.rs  solver.rs
tui/: Cargo.toml
tui/src/: main.rs
